# todo-sync

./: .gitignore  README.md  package.json
api/: Cargo.toml
api/migrations/: 20240915030736_create_table_users.down.sql  20240915030736_create_table_users.up.sql  20240915032125_create-table-users-profile.down.sql  20240915032125_create-table-users-profile.up.sql  20240915035232_create_table_auth_tokens.down.sql  20240915035232_create_table_auth_tokens.up.sql  20240929155611_create-folder-table.down.sql  20240929155611_create-folder-table.up.sql  20241005184104_create-folder-columns.down.sql  20241005184104_create-folder-columns.up.sql
api/src/: auth.rs  auth_token.rs  database.rs  folder_columns.rs  folders.rs  jwt.rs  main.rs  router.rs  users.rs  users_profile.rs
backend/: Cargo.toml
backend/migrations/: 20240818155415_create-users-table.up.sql  20240824163317_sessions.up.sql
backend/src/: authentication.rs  errors.rs  main.rs  responses.rs  router.rs  utils.rs
backend/src/database/: mod.rs
backend/src/http/: mod.rs  users.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: app.tsx  index.css  main.tsx
frontend/src/components/: auth-card.tsx  folder-column-render.tsx  toasts.tsx  user-menu.tsx
frontend/src/components/auth-card/: auth-card.tsx
frontend/src/components/buttons/: back-button.tsx  color-button.tsx  delay-button.tsx  hide-aside-button.tsx  logout-button.tsx  show-aside-button.tsx  theme-button.tsx  user-settings-button.tsx
frontend/src/components/dialogs/: create-folder-column-dialog.tsx  delete-folder-dialog.tsx
frontend/src/components/folder-columns/: add-new-folder-column.tsx  empty-folder-column.tsx  folder-column-wrapper.tsx  get-folder-columns.tsx  render-folder-columns.tsx
frontend/src/components/folder-controller/: folder-controller.tsx
frontend/src/components/forms/: create-folder-column.tsx  login-user-form.tsx
frontend/src/components/inputs/: date-picker.tsx  drag-and-drop.tsx  terms-and-conditions.tsx
frontend/src/components/logo-mark/: logo-mark.tsx
frontend/src/components/menus/: folder-menu.tsx  user-menu.tsx
frontend/src/components/navbar/: nav-buttons.tsx  nav-desktop.tsx  nav-mobile.tsx  nav-redirects.tsx  navbar.tsx
frontend/src/components/sheets/: create-folder-sheet.tsx  edit-folder-sheet.tsx  folder-sheet.tsx  navbar-menu-sheet.tsx
frontend/src/components/sortable-list/: drag-handle.tsx  sortable-item.tsx  sortable-list.tsx
frontend/src/components/switchs/: theme-switch.tsx
frontend/src/routes/: auth-route.tsx  first-wizard-route.tsx  folder-route.tsx  forgot-user-route.tsx  home-route.tsx  logged-route.tsx  login-user-route.tsx  main-content-route.tsx  not-found-route.tsx  protected-auth.tsx  register-user-route.tsx  root.tsx  wizard-page.tsx  wizard-route.tsx
frontend/src/shared/: atoms.ts  constants.ts  types.ts
frontend/src/test/: test-providers.tsx
(+117 files in other folders)
