[package]
name = "todo-sync-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39.3", features = ["full"] }
